--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Olympus Detailing — Luxury Car Care</title>
-  </head>
-  <body class="bg-neutral-950">
-    <div id="root"></div>
+    <title>Olympus Detailing</title>
     <script type="module" src="/src/main.jsx"></script>
+  </head>
+  <body class="bg-neutral-950 text-neutral-100">
+    <div id="root"></div>
   </body>
 </html>
